##Text encoding: utf-8

2009-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: correctly save and load attached hydrogens position.

2009-12-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: correctly add atoms inside fragments.

2009-12-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/loader.cc: don't double free plugins dir.

2009-12-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/formula.cc: do not interpret a substring as a residue when the
	whole string is a symbol element. [#28192]

2009-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/paint/preferences.glade: periodic table is not anymor tearable
	because this feature is going to be deprecated iN both gtk+ and goffice.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/settings.h: ditto.
	* libs/gcp/tools.cc: ditto.
	* libs/gcp/tools.h: ditto.
	* programs/paint/gchempaint.schemas.in: ditto.

2009-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: check if goffice is >= 0.7.16.
	* libs/gcu/cmd-context.cc: adapt to new goffice API change.

2009-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.10.10).

2009-10-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/glview.cc: fixed behavior with gtk+-2.18.
	* mozilla-plugin/chem-viewer.cc: do not load an object more than once.

2009-10-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* mozilla-plugin/moz-plugin.c (ChemNew): fix parameters management (don't
	crash anymore).
	
2009-10-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixed color in tool buttons. [#27746]

2009-10-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/chaintool.cc: Do not crash when changing the bond
	angle in the chain tool. [sr #107062]

2009-10-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/isotopes.xml.in: fixed three typos. [#27619]
